K8s/openshift/backend/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: colab-backend
  namespace: teklu-soft-dev
  labels:
    app: colab-app-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: colab-backend # only manage this pods 
  template:
    metadata:
      labels:
        app: colab-backend # this is the pod labels that let's us to connect to services  like clusterIP and so on
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1011790000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: colab-backend-continer
          image: tekluman/colab-backend:v1.9.0
          ports:
            - containerPort: 5000
              protocol: TCP
          resources:
            limits:
              cpu: "1000m"
              memory: "768Mi"
            requests:
              cpu: "500m"
              memory: "384Mi"
          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 12
          livenessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 120
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 6
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            capabilities:
              drop: ["ALL"]
